--- a/src/styles/components/_invoiceTemplate.scss
+++ b/src/styles/components/_invoiceTemplate.scss
@@ -111,7 +111,14 @@
       }
 
       strong {
-        font-weight: bold;
+        font-size: 15px;
+        font-weight: 500;
+
+        &.point {
+          font-size: 16px;
+          font-weight: bold;
+          letter-spacing: 3px;
+        }
       }
     }
   }
