텍스트 정렬 변경

--- a/src/styles/base/_print.scss
+++ b/src/styles/base/_print.scss
@@ -123,6 +123,18 @@
     display: none;
     margin: 0;
   }
+
+  .amount-table {
+    td.amount {
+      text-align: right !important;
+      padding: 3px 18px !important;
+    }
+
+    td.right {
+      text-align: right !important;
+      padding: 3px 18px !important;
+    }
+  }
 }
 
 /* ----------------------
