--- a/src/styles/base/_print.scss
+++ b/src/styles/base/_print.scss
@@ -135,6 +135,10 @@
       padding: 3px 18px !important;
     }
   }
+
+  .invoice-footer {
+    font-size: 15px;
+  }
 }
 
 /* ----------------------
