과일 항목 추가

--- a/src/styles/components/_clientInputForm.scss
+++ b/src/styles/components/_clientInputForm.scss
@@ -142,10 +142,10 @@
   //과일 목록
   .fruit-options {
     position: fixed;
-    bottom: 0;
+    bottom: 3px;
     right: 20px;
     width: 45%;
-    height: calc(100vh - 25px);
+    height: calc(100vh - 26px);
     background-color: #fff;
     padding: 10px;
     border: 1px solid #ddd;
