--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -6,7 +6,7 @@
 ---------------------- */
 .table-container {
   width: 100%;
-  max-height: 600px;
+  height: calc(100vh - 88px);
   overflow-y: auto;
 }
 
