--- a/src/styles/base/_print.scss
+++ b/src/styles/base/_print.scss
@@ -143,6 +143,9 @@
   .invoice-footer {
     font-size: 15px;
   }
+  .table-container {
+    height: 100% !important;
+  }
 }
 
 /* ----------------------
