--- a/src/styles/components/_clientInputForm.scss
+++ b/src/styles/components/_clientInputForm.scss
@@ -143,8 +143,9 @@
   .fruit-options {
     position: fixed;
     bottom: 3px;
-    right: 20px;
-    width: 45%;
+    //right: 20px;
+    right: 7px;
+    width: 46.5%;
     height: calc(100vh - 26px);
     background-color: #fff;
     padding: 10px;
@@ -155,6 +156,7 @@
     flex-wrap: wrap;
     gap: 10px;
     z-index: 100;
+    overflow-y: auto;
 
     /* 닫기 버튼 */
     .close-btn {
