--- a/src/styles/base/_print.scss
+++ b/src/styles/base/_print.scss
@@ -44,6 +44,7 @@
     text-align: center !important;
     word-break: break-word !important;
     white-space: normal !important;
+    border: 1px solid #ccc !important;
   }
 
   .invoice-print {
