보더 컬러 변경

--- a/src/styles/components/_clientInputForm.scss
+++ b/src/styles/components/_clientInputForm.scss
@@ -149,7 +149,7 @@
     height: calc(100vh - 26px);
     background-color: #fff;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -172,7 +172,7 @@
       gap: 12px;
       padding: 6px 10px;
       border-radius: 6px;
-      border: 1px solid #ddd;
+      border: 1px solid #ccc;
 
       h4 {
         font-size: 15px;
