--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -24,7 +24,7 @@ table {
     font-size: 16px;
     padding: 10px 8px;
     text-align: center;
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
     vertical-align: middle;
   }
 }
@@ -164,7 +164,7 @@ table {
 
   .invoice-table th,
   .invoice-table td {
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
     padding: 6px;
     text-align: center;
   }
