--- a/src/styles/components/_clientList.scss
+++ b/src/styles/components/_clientList.scss
@@ -21,7 +21,7 @@
       display: flex;
       flex-direction: column;
       padding: 0px 20px;
-      border: 1px solid #ddd;
+      border: 1px solid #ccc;
       border-radius: 8px;
       background-color: #fff;
       transition: background 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
