--- a/src/styles/components/_clientList.scss
+++ b/src/styles/components/_clientList.scss
@@ -38,7 +38,7 @@
         display: flex;
         padding: 8px 0px;
         justify-content: space-between;
-        border-bottom: 1px solid #ddd;
+        border-bottom: 1px solid #ccc;
 
         .client-action {
           display: flex;
