--- a/src/styles/pages/_amount.scss
+++ b/src/styles/pages/_amount.scss
@@ -74,7 +74,7 @@
       font-weight: 700;
       color: #000;
       padding-bottom: 4px;
-      border-bottom: 2px solid #ddd;
+      border-bottom: 2px solid #bbb;
     }
   }
 
