Intersection Observer 설정 (무한 스크롤) 코드 수정

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -80,7 +80,7 @@ table {
     }
 
     .observer-trigger {
-      height: 1px;
+      height: 60px; // 수정: 기존 1px → 60px
       width: 100%;
     }
   }
