--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -20,8 +20,7 @@ a.default {
   padding: 15px 30px;
   transition: 0.14s;
   line-height: 1;
-  display: flex;
-  align-items: center;
+  @include flex-j-a-center;
   @include line-primary;
 
   &:hover {
